--- a/classes/HMS_EventLoggerService.cls
+++ b/classes/HMS_EventLoggerService.cls
@@ -2,9 +2,11 @@
 global with sharing class   HMS_EventLoggerService {
 
     @HttpPost
-    global static void logEvent(Date eventDate, String parentId, String endpointUrl, String method, String requestBody, Integer responseStatusCode, String responseStatus, String responseBody) {
-        HMS_EventLogger__c eventLogger = new HMS_EventLogger__c(Name = method+ ' ' + String.valueOf(eventDate) ,EventDate__c = eventDate, ParentId__c = parentId, EndPointUrl__c = endpointUrl, Method__c = method, RequestBody__c = requestBody,	ResponseStatusCode__c = responseStatusCode,	ResponseStatus__c=responseStatus, ResponseBody__c = responseBody);
+
+    global static void logEvent(String parentId, String endpointUrl, String method, String requestBody, Integer responseStatusCode, String responseStatus, String responseBody, Integer attemps){
+        HMS_EventLogger__c eventLogger = new HMS_EventLogger__c(Name = method + ' ' + String.valueOf(Date.today()),EventDate__c = Date.today(), ParentId__c = parentId, EndPointUrl__c = endpointUrl, Method__c = method, RequestBody__c = requestBody, ResponseStatus__c = responseStatus, ResponseStatusCode__c = responseStatusCode, ResponseBody__c = responseBody, Attempts__c = attemps);
         Database.insert(eventLogger);
     }
 }
+
 
