--- a/classes/HMS_EventLoggerWrapper.cls
+++ b/classes/HMS_EventLoggerWrapper.cls
@@ -1,6 +1,6 @@
 
 public with sharing class HMS_EventLoggerWrapper {
-        public Date eventDate { get; set; }
+
         public String parentId { get; set; }
         public String endpointUrl { get; set; }
         public String requestBody { get; set; }
@@ -8,9 +8,9 @@ public with sharing class HMS_EventLoggerWrapper {
         public String method { get; set; }
         public Integer responseStatusCode { get; set; }
         public String responseStatus { get; set; }
+        public Integer attemps { get; set; }
 
-        public HMS_EventLoggerWrapper(Date eventDate, String parentId, String endpointUrl, String method, String requestBody, Integer responseStatusCode, String responseStatus, String responseBody) {
-            this.eventDate = eventDate;
+        public HMS_EventLoggerWrapper(String parentId, String endpointUrl, String method, String requestBody, Integer responseStatusCode, String responseStatus, String responseBody, Integer attemps) {
             this.parentId = parentId;
             this.endpointUrl = endpointUrl;
             this.requestBody = requestBody;
@@ -18,10 +18,12 @@ public with sharing class HMS_EventLoggerWrapper {
             this.method = method;
             this.responseStatus = responseStatus;
             this.responseStatusCode = responseStatusCode;
+            this.attemps = attemps;
         }
 
         public String serializeObject() {
             return JSON.serialize(this);
         }
+    }
 
-}
+
